--- a/css/main.css
+++ b/css/main.css
@@ -1,8 +1,47 @@
 html {
   background-color: transparent; }
 
+body {
+  background-color: rgba(0, 106, 183, 0.3);
+  background-image: url(../images/hrGlass.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 34.1em; }
+
+#title-bar {
+  -webkit-app-region: drag;
+  height: 40px;
+  background-color: transparent;
+  padding: none;
+  margin: 0px; }
+
+#title {
+  position: fixed;
+  top: 6px;
+  left: 1em;
+  color: rgba(245, 237, 237, 0.32); }
+
+#title-bar-btns {
+  -webkit-app-region: no-drag;
+  position: fixed;
+  top: 0px;
+  right: 1em; }
+
+#title-bar-btns button {
+  background-color: transparent;
+  border: none;
+  color: rgba(255, 255, 255, 0.56);
+  font-size: 1.5em;
+  font-weight: 300; }
+
 .field {
-  padding: 1em; }
+  padding: .5em 1em;
+  width: 23em;
+  margin: 1em auto;
+  border-radius: 5px;
+  border: 1px solid rgba(250, 250, 250, 0.2);
+  background-color: rgba(250, 250, 250, 0.28);
+  box-shadow: 2px 2px 19px 0px rgba(0, 0, 0, 0.2); }
 
 .form-section {
   padding: .5em 0em; }
@@ -10,13 +49,20 @@ html {
 .label {
   font-size: .95em;
   display: inline-block;
-  vertical-align: bottom; }
+  vertical-align: bottom;
+  color: #96f5cf; }
+
+.dob {
+  display: inline; }
+
+.sex-section {
+  padding-top: .2em; }
 
 .userInput .sex {
   display: inline; }
 
-.dob {
-  display: inline; }
+.female-label {
+  padding-left: .7em; }
 
 .bmi {
   width: 4.6em;
@@ -24,17 +70,58 @@ html {
 
 .bmi-label {
   display: inline-block;
-  font-size: .8em;
+  font-size: .85em;
   margin-bottom: 0 !important; }
 
 .exercise-select {
   width: 8em; }
 
+.clock {
+  margin: 1em;
+  width: 20.78em;
+  padding: .25em;
+  display: flex;
+  border: 2px solid;
+  border-radius: 10px;
+  color: ghostwhite;
+  background-color: rgba(250, 250, 250, 0.13); }
+
+.clockSegment {
+  display: flex;
+  flex-direction: column;
+  padding: 0em 0.5em; }
+
+.clockSegment span {
+  text-align: center;
+  font-size: 1.65em;
+  font-weight: 600; }
+
+.clockSegment label {
+  text-align: center;
+  font-size: .95em;
+  letter-spacing: .3px; }
+
+.colon {
+  font-size: 2em;
+  line-height: 1em;
+  font-weight: 600;
+  width: .1em; }
+
 .addClock {
-  font-size: 1.75em;
+  height: .8em;
+  left: 14.4em;
+  font-size: 1.4em;
   padding: 0.16em 0.146em;
-  height: .9em;
   font-weight: 300;
-  padding-bottom: 9px; }
+  padding-bottom: 9px;
+  opacity: .9;
+  position: absolute;
+  opacity: 0;
+  transition: opacity .5s;
+  z-index: 4; }
+
+.clock:hover .addClock {
+  opacity: .55;
+  transition: opacity .5s; }
 
 /*# sourceMappingURL=main.css.map */
