--- a/templates/title-bar.html
+++ b/templates/title-bar.html
@@ -1,9 +1,9 @@
-<div id="title-bar">
-   <div id="title">The Final Countdown</div>
+<div class="title-bar">
+   <div class="title">The Final Countdown</div>
 
-   <div id="title-bar-btns">
-      <button id="min-btn" ng-click="minWindow()">-</button>
-      <button id="max-btn">+</button>
-      <button id="close-btn">x</button>
+   <div class="title-bar-btns">
+      <button class="min-btn" ng-click="minWindow()">-</button>
+      <button class="max-btn" ng-click="maxWindow()">+</button>
+      <button class="close-btn" ng-click="closeWindow()">x</button>
    </div>
 </div>
