--- a/templates/title-bar.html
+++ b/templates/title-bar.html
@@ -1,4 +1,4 @@
-<div class="title-bar">
+<div class="title-bar" ng-class="{ 'hideBar': displayClock }">
    <div class="title">The Final Countdown</div>
 
    <div class="title-bar-btns">
