--- a/templates/user-form.html
+++ b/templates/user-form.html
@@ -167,7 +167,6 @@
             <select name="country" class="country" ng-model="user.country" required>
                <option value="" selected="selected" disabled>Select Country</option>
                <option value="United States">United States</option>
-               <option value="United Kingdom">United Kingdom</option>
                <option value="Afghanistan">Afghanistan</option>
                <option value="Albania">Albania</option>
                <option value="Algeria">Algeria</option>
@@ -415,3 +414,4 @@
    </label>
    <a class="button is-primary is-outlined addClock" ng-click="addClock()">+</a>
 </div>
+<!-- resizable r-directions="['right']" -->
