--- a/css/main.css
+++ b/css/main.css
@@ -33,7 +33,7 @@ body {
   max-height: 11em;
   max-width: 11em;
   width: 18vw;
-  opacity: 0.4;
+  opacity: 0.43;
   left: 43%; }
 
 #clockIcon {
@@ -44,7 +44,7 @@ body {
 .alt-logo {
   height: 12vw !important;
   width: 12vw !important;
-  opacity: 0.4 !important;
+  opacity: 0.5 !important;
   left: 0.4% !important; }
 
 .title {
@@ -68,11 +68,11 @@ body {
   color: white;
   font-size: 1.5em;
   font-weight: 300;
-  opacity: .5;
+  opacity: .52;
   transition: opacity .2s; }
 
 .title-bar-btns button:hover {
-  opacity: .7;
+  opacity: .75;
   transition: opacity .2s; }
 
 .field {
@@ -109,6 +109,9 @@ body {
 
 .female-label {
   padding-left: .7em; }
+
+.country-section .icon {
+  color: rgba(240, 128, 128, 0.88) !important; }
 
 .bmi {
   width: 4.6em;
@@ -154,7 +157,7 @@ input[type=number]::-webkit-outer-spin-button {
   transition: border .2s; }
 
 html:hover .show-border {
-  border: 2px solid rgba(255, 255, 255, 0.25);
+  border: 2px solid rgba(255, 255, 255, 0.36);
   transition: border .2s; }
 
 .hideBar {
@@ -167,16 +170,20 @@ body:hover .hideBar {
   opacity: 1;
   transition: opacity .2s; }
 
+body:hover .clockWrap-tools {
+  opacity: 1;
+  transition: opacity .2s; }
+
 .clock-wrap {
   width: fit-content;
-  min-width: 321px;
-  margin: auto; }
+  margin: auto;
+  min-width: 320px; }
 
 .clock {
   margin: 1em auto;
   width: 73vw;
-  min-width: 320px;
-  padding: 1vw;
+  min-width: 275px;
+  padding: 1vw 1.5vw;
   padding-top: .4em;
   display: flex;
   border: 2px solid;
@@ -208,10 +215,14 @@ body:hover .hideBar {
   font-weight: 600;
   width: .1em; }
 
+.clock-tools {
+  width: 0;
+  position: absolute;
+  left: 81.2vw; }
+
 .removeClock, .addClock {
   height: 4.2vw;
   width: 4vw;
-  left: 81.2vw;
   font-size: 4vw;
   padding: 1vw;
   font-weight: 300;
@@ -221,18 +232,38 @@ body:hover .hideBar {
   backface-visibility: hidden; }
 
 .addClock {
+  position: absolute;
+  left: 81.2vw;
   margin-top: 2px; }
 
 .removeClock {
   opacity: 0;
+  position: relative;
   transition: opacity .4s;
   z-index: 4; }
 
 .clock-wrap:hover .removeClock {
-  opacity: .6;
+  opacity: .65;
   transition: opacity .4s;
   backface-visibility: hidden; }
 
+.clock-wrap .icon {
+  position: relative;
+  color: beige;
+  width: 4vw;
+  margin-left: 2vw;
+  font-size: 3.4vw;
+  opacity: .7;
+  transition: opacity .3s; }
+
+.clock-wrap .icon:hover {
+  cursor: pointer;
+  opacity: 1;
+  transition: opacity .2s; }
+
+@media (max-width: 470px) {
+  .clock .icon {
+    padding-bottom: .65em; } }
 .clock-name {
   position: relative;
   width: 0;
@@ -243,6 +274,10 @@ body:hover .hideBar {
   font-weight: 700;
   text-shadow: 1px 1px rgba(0, 0, 0, 0.11);
   color: bisque; }
+
+.clockWrap-tools {
+  opacity: 0;
+  transition: opacity .2s; }
 
 .checkbox {
   font-size: 3.2vw;
