--- a/css/main.css
+++ b/css/main.css
@@ -16,7 +16,8 @@ body {
   border: 2px solid rgba(255, 255, 255, 0);
   background-image: none;
   background: transparent;
-  min-width: 321.92px; }
+  min-width: 321.92px;
+  transition: border .2s; }
 
 .title-bar {
   -webkit-app-region: drag;
@@ -29,10 +30,10 @@ body {
   z-index: -1;
   position: absolute;
   bottom: .2em;
-  height: 17vw;
-  max-height: 11em;
-  max-width: 11em;
-  width: 18vw;
+  height: 18vw;
+  max-height: 11.2em;
+  max-width: 11.2em;
+  width: 19vw;
   opacity: 0.43;
   left: 43%; }
 
@@ -44,7 +45,7 @@ body {
 .alt-logo {
   height: 12vw !important;
   width: 12vw !important;
-  opacity: 0.5 !important;
+  opacity: 0.55 !important;
   left: 0.4% !important; }
 
 .title {
@@ -154,11 +155,14 @@ input[type=number]::-webkit-outer-spin-button {
   border: 2px solid rgba(255, 255, 255, 0);
   border-radius: 5px;
   height: 100%;
-  transition: border .2s; }
+  transition: border .2s;
+  transition: background-color .5s; }
 
 html:hover .show-border {
-  border: 2px solid rgba(255, 255, 255, 0.36);
-  transition: border .2s; }
+  border: 2px solid rgba(255, 255, 255, 0.4);
+  transition: border .2s;
+  background-color: rgba(0, 0, 0, 0.21);
+  transition: background-color 3s; }
 
 .hideBar {
   height: 7vw;
@@ -181,7 +185,7 @@ body:hover .clockWrap-tools {
 
 .clock {
   margin: 1em auto;
-  width: 73vw;
+  width: 73.6vw;
   min-width: 275px;
   padding: 1vw 1.5vw;
   padding-top: .4em;
@@ -202,7 +206,9 @@ body:hover .clockWrap-tools {
 .clockSegment span {
   text-align: center;
   font-size: 5vw;
-  font-weight: 600; }
+  font-weight: 600;
+  padding-top: .4vw;
+  height: 7vw; }
 
 .clockSegment label {
   text-align: center;
@@ -213,12 +219,54 @@ body:hover .clockWrap-tools {
   font-size: 6vw;
   line-height: 1em;
   font-weight: 600;
+  padding-top: .4vw;
   width: .1em; }
 
 .clock-tools {
-  width: 0;
   position: absolute;
-  left: 81.2vw; }
+  left: 81.2vw;
+  opacity: 0; }
+
+.calender-icon {
+  font-size: 3.7vw;
+  position: relative;
+  width: 7vw;
+  height: 4vw;
+  vertical-align: top;
+  opacity: .75;
+  transition: opacity .4s; }
+
+.calender-content {
+  max-height: none;
+  text-align: center;
+  position: absolute;
+  margin: 0;
+  backface-visibility: hidden; }
+
+.calender-content img {
+  width: 21em;
+  position: relative;
+  backface-visibility: hidden; }
+
+.calender-content h3 {
+  width: 5.3em;
+  margin: auto;
+  position: relative;
+  bottom: 11em;
+  font-size: 119%;
+  font-weight: 600;
+  white-space: nowrap;
+  overflow: hidden;
+  color: ghostwhite;
+  opacity: 0.85; }
+
+.calender-content p {
+  position: relative;
+  bottom: 10em;
+  font-size: 1.1em;
+  font-weight: 600;
+  color: crimson;
+  opacity: .88; }
 
 .removeClock, .addClock {
   height: 4.2vw;
@@ -227,7 +275,7 @@ body:hover .clockWrap-tools {
   padding: 1vw;
   font-weight: 300;
   padding-bottom: 9px;
-  opacity: .9;
+  opacity: .93;
   position: absolute;
   backface-visibility: hidden; }
 
@@ -237,17 +285,24 @@ body:hover .clockWrap-tools {
   margin-top: 2px; }
 
 .removeClock {
-  opacity: 0;
   position: relative;
   transition: opacity .4s;
   z-index: 4; }
 
-.clock-wrap:hover .removeClock {
-  opacity: .65;
+@media (min-width: 600px) {
+  .removeClock {
+    margin-bottom: 1vw; } }
+.clock-wrap:hover .clock-tools {
+  opacity: .7;
   transition: opacity .4s;
   backface-visibility: hidden; }
 
-.clock-wrap .icon {
+.clock-wrap .calender-icon:hover {
+  cursor: pointer;
+  opacity: 1;
+  transition: opacity .2s; }
+
+.clock-wrap .chart-icon {
   position: relative;
   color: beige;
   width: 4vw;
@@ -256,21 +311,22 @@ body:hover .clockWrap-tools {
   opacity: .7;
   transition: opacity .3s; }
 
-.clock-wrap .icon:hover {
+.clock-wrap .chart-icon:hover {
   cursor: pointer;
   opacity: 1;
   transition: opacity .2s; }
 
 @media (max-width: 470px) {
-  .clock .icon {
+  .clock .chart-icon {
     padding-bottom: .65em; } }
 .clock-name {
   position: relative;
   width: 0;
   padding: 0;
-  top: -1.5vw;
-  left: 0vw;
-  font-size: 2.5vw;
+  top: -1.4vw;
+  left: 1vw;
+  white-space: nowrap;
+  font-size: 2.54vw;
   font-weight: 700;
   text-shadow: 1px 1px rgba(0, 0, 0, 0.11);
   color: bisque; }
@@ -287,5 +343,11 @@ body:hover .clockWrap-tools {
 
 .checkbox:hover {
   color: #93ffe3; }
+
+.clock-modal {
+  background-color: aliceblue; }
+
+.chart-wrap {
+  height: 70vh; }
 
 /*# sourceMappingURL=main.css.map */
