--- a/sass/main.scss
+++ b/sass/main.scss
@@ -20,6 +20,7 @@ body {
   background-image: none;
   background: transparent;
   min-width: 321.92px;
+  transition: border .2s;
 }
 
 
@@ -37,10 +38,10 @@ body {
   z-index: -1;
   position: absolute;
   bottom: .2em;
-  height: 17vw;
-  max-height: 11em;
-  max-width: 11em;
-  width: 18vw;
+  height: 18vw;
+  max-height: 11.2em;
+  max-width: 11.2em;
+  width: 19vw;
   opacity: 0.43;
   left: 43%;
 }
@@ -52,7 +53,7 @@ body {
 .alt-logo {
   height: 12vw !important;
   width: 12vw !important;
-  opacity: 0.5 !important;
+  opacity: 0.55 !important;
   left: .4%!important;
 }
 
@@ -108,18 +109,6 @@ body {
   display: inline-block;
   vertical-align: bottom;
   color: rgb(150, 245, 207);
-}
-
-.field select {
-  // background-color: rgba(250,250,250,.2);
-  // color: white;
-  // background-color: rgba(152, 152, 152, 0.27);
-  // color: rgba(255, 255, 255, 0.84);
-}
-
-.field .input {
-  // background-color: rgba(152, 152, 152, 0.27);
-  // color: rgba(255, 255, 255, 0.84);
 }
 
 .name {
@@ -194,10 +183,13 @@ margin: 0;
   border-radius: 5px;
   height: 100%;
   transition: border .2s;
+  transition: background-color .5s;
 }
 html:hover .show-border {
-  border: 2px solid rgba(255, 255, 255, .36);
+  border: 2px solid rgba(255, 255, 255, .4);
   transition: border .2s;
+  background-color: rgba(0,0,0,.21);
+  transition: background-color 3s;
 }
 .hideBar {
   height: 7vw;
@@ -222,7 +214,7 @@ body:hover .clockWrap-tools {
 
 .clock {
   margin: 1em auto;
-  width: 73vw; 
+  width: 73.6vw; 
   min-width: 275px;
   padding: 1vw 1.5vw;
   padding-top: .4em;
@@ -245,6 +237,8 @@ body:hover .clockWrap-tools {
   text-align: center;
   font-size: 5vw;
   font-weight: 600;
+  padding-top: .4vw;
+  height: 7vw;
 }
 .clockSegment label {
   text-align: center;
@@ -256,13 +250,58 @@ body:hover .clockWrap-tools {
   font-size: 6vw;
   line-height: 1em;
   font-weight: 600;
+  padding-top: .4vw;
   width: .1em;
 }
 
 .clock-tools {
-  width: 0;
+  // width: 0;
   position: absolute;
   left: 81.2vw;
+  opacity: 0;
+}
+
+.calender-icon {
+  font-size: 3.7vw;
+  position: relative;
+  width: 7vw;
+  height: 4vw;
+  vertical-align: top;
+  opacity: .75;
+  transition: opacity .4s;  
+}
+
+.calender-content {
+  max-height: none;
+  text-align: center;
+  position: absolute;
+  margin: 0;
+  backface-visibility: hidden;
+}
+.calender-content img {
+  width: 21em;
+  position: relative;
+  backface-visibility: hidden;
+}
+.calender-content h3 {
+  width: 5.3em;
+  margin: auto;
+  position: relative;
+  bottom: 11em;
+  font-size: 119%;
+  font-weight: 600;
+  white-space: nowrap;
+  overflow: hidden;
+  color: ghostwhite;
+  opacity: .85
+}
+.calender-content p {
+  position: relative;
+  bottom: 10em;
+  font-size: 1.1em;
+  font-weight: 600;
+  color: crimson;
+  opacity: .88;
 }
 
 .removeClock, .addClock {
@@ -272,7 +311,7 @@ body:hover .clockWrap-tools {
   padding: 1vw;
   font-weight: 300;
   padding-bottom: 9px;
-  opacity: .9;
+  opacity: .93;
   position: absolute;
   backface-visibility: hidden;
 }
@@ -282,23 +321,29 @@ body:hover .clockWrap-tools {
   margin-top: 2px;
 }
 .removeClock {
-  opacity: 0;
+  // opacity: 0;
   position: relative; 
   transition: opacity .4s;  
   z-index: 4; 
 }
-.clock-wrap:hover .removeClock {
-  opacity: .65;
+@media (min-width: 600px){
+  .removeClock {
+    margin-bottom: 1vw;
+  }
+}
+.clock-wrap:hover .clock-tools {
+  opacity: .7;
   transition: opacity .4s;
   backface-visibility: hidden;
 }
-// .clock-wrap:hover .icon {
-//   opacity: .6;
-//   transition: opacity .4s;
-//   backface-visibility: hidden;
-// }
 
-.clock-wrap .icon {
+.clock-wrap .calender-icon:hover  {
+  cursor: pointer;
+  opacity: 1;
+  transition: opacity .2s;
+}
+
+.clock-wrap .chart-icon {
   position: relative;
   color: beige;
   width: 4vw;
@@ -307,13 +352,13 @@ body:hover .clockWrap-tools {
   opacity: .7;
   transition: opacity .3s;
 }
-.clock-wrap .icon:hover  {
+.clock-wrap .chart-icon:hover  {
   cursor: pointer;
   opacity: 1;
   transition: opacity .2s;
 }
 @media (max-width: 470px){
-  .clock .icon {
+  .clock .chart-icon {
     padding-bottom: .65em;
   }
 }
@@ -322,9 +367,10 @@ body:hover .clockWrap-tools {
   position: relative;
   width: 0;
   padding: 0;
-  top: -1.5vw;
-  left: 0vw;
-  font-size: 2.5vw;
+  top: -1.4vw;
+  left: 1vw;
+  white-space: nowrap;
+  font-size: 2.54vw;
   font-weight: 700;
   text-shadow: 1px 1px rgba(0, 0, 0, 0.11);
   color: bisque;
@@ -343,4 +389,14 @@ body:hover .clockWrap-tools {
 }
 .checkbox:hover {
   color: rgba(147, 255, 227, 1);
+}
+
+
+//-------------- chart modal -------------//
+.clock-modal {
+  background-color: aliceblue;
+}
+
+.chart-wrap {
+  height: 70vh;
 }
