app-icon,clock-end,final chart

--- a/css/main.css
+++ b/css/main.css
@@ -347,6 +347,14 @@ body:hover .clockWrap-tools {
 .clock-modal {
   background-color: aliceblue; }
 
+.clock-modal p {
+  color: rgba(255, 255, 255, 0.35);
+  position: absolute;
+  text-align: center;
+  bottom: 4vw;
+  font-size: .76em;
+  width: 70%; }
+
 .chart-wrap {
   height: 70vh; }
 
