--- a/templates/user-form.html
+++ b/templates/user-form.html
@@ -430,9 +430,10 @@
       <div class="modal-background"></div>
       <div class="modal-content chart-wrap">
          <canvas class="life-chart chart chart-bar" chart-data="data" 
-         chart-labels="labels" legend="true" chart-series="series" chart-options="options">
+         chart-labels="labels" legend="true" chart-series="series" chart-options="options" chart-colors="colors">
          </canvas>
       </div>
+      <p>* Maximize your longevity by abstaining from smoking and living an active lifestyle.</p>
       <button class="modal-close is-large" aria-label="close" ng-click="toggleModal()"></button>
    </div>
 
